# xai-churn-predictor

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  FINAL_RESULTS.md  INDEX.md  LICENSE  PROJECT_OVERVIEW.md  README.md  RESULTS_SUMMARY.md  app.py  main.py  pyproject.toml  requirements.txt  run_dashboard.bat  run_pipeline.bat  technical_report.aux  technical_report.out  technical_report.toc  tune_hyperparameters.py
config/: config.yaml
data/results/: hyperparameter_tuning_comparison.csv
docs/: technical_report.tex
notebooks/: 01_exploratory_data_analysis.ipynb
src/evaluation/: __init__.py  evaluator.py
src/explainability/: __init__.py  explainer.py
src/ingestion/: __init__.py  data_loader.py
src/models/: __init__.py  hyperparameter_tuner.py  model_trainer.py
src/preprocessing/: __init__.py  preprocessor.py
src/utils/: __init__.py  config_loader.py  constants.py  logger.py
src/visualization/: __init__.py  plotter.py
tests/: test_edge_cases.py  test_integration.py  test_pipeline.py
